fix footer and format cards and add hrefs

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <title>About | Kaitlyn Steagall</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
@@ -22,14 +23,14 @@
 
   <div class="container">
 
-    <div class="row">
+    <div class="row" style="border: solid 2px black">
 
-      <div class="col-xl-9 mb-3">
+      <div class="col-xl-9 mb-3 mt-5">
         <div class="row">
           <div class="col-xl-12 mx-auto mb-4">
 
-            <img id="myPic" class="img-responsive float-left mb-1 mr-4" style="width:30%;" src="./assets/images/tempheadshot.jpg"
-              alt="kaitlyn's headshot">
+            <img id="myPic" class="img-responsive float-left mb-1 mr-4" style="width:30%;"
+              src="./assets/images/tempheadshot.jpg" alt="kaitlyn's headshot">
             <p>My name is Kaitlyn Steagall, I was born in Albany, OR January, 12 1994. I moved up to Tigard, OR when I
               started middle school and I now live in Aloha, OR with Kent, my boyfriend of three and a half years, my
               dog
@@ -54,48 +55,55 @@
         </div>
       </div>
 
-      <div class="col-xl-3 mb-5">
-        <!-- <div class="row"> -->
-        <div class="col-xl-12 col-lg-4 mx-auto mb-4">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+      <div class="col-xl-3 mb-3 mt-5">
+        <div class="row">
+          <div class="col-xl-12 mx-auto mb-4">
+            <div class="card text-center">
+              <img src="" class="card-img-top" alt="">
+              <div class="card-body">
+                <h5 class="card-title"><a href="https://noahsylwester.github.io/Netpets/">NetPets</a></h5>
+                <p><a href="https://github.com/NoahSylwester/Netpets">Checkout our collaborative code</a></p>
+              </div>
             </div>
           </div>
         </div>
-        <!-- </div> -->
-        <!-- <div class="row"> -->
-        <div class="col-xl-12 col-lg-4 mx-auto mb-4">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+        <div class="row">
+          <div class="col-xl-12 mx-auto mb-4">
+            <div class="card text-center">
+              <img src="" class="card-img-top" alt="">
+              <div class="card-body">
+                <h5 class="card-title"><a href="https://kaitlynsteagall.github.io/Animal-GIPHY-API/">Animal GIPHY
+                    API</a></h5>
+                <p><a href="https://github.com/KaitlynSteagall/Animal-GIPHY-API">Checkout my ajax code</a></p>
+              </div>
             </div>
           </div>
         </div>
-        <!-- </div> -->
-        <!-- <div class="row"> -->
-        <div class="col-xl-12 col-lg-4 mx-auto mb-4">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+        <div class="row">
+          <div class="col-xl-12 mx-auto mb-4">
+            <div class="card text-center">
+              <img src="" class="card-img-top" alt="">
+              <div class="card-body">
+                <h5 class="card-title"><a href="https://kaitlynsteagall.github.io/Trivia-Game/">Animal Trivia</a></h5>
+                <p><a href="https://github.com/KaitlynSteagall/Trivia-Game">Checkout my jquery code</a></p>
+              </div>
             </div>
           </div>
         </div>
-        <!-- </div> -->
       </div>
 
     </div>
 
   </div>
 
-  <div class="navbar navbar-expand-lg navbar-light bg-light fixed-bottom pt-3 pb-3"
-    style="width: 100%; text-align: center;">
-    <div class="col-xl-3 ml-auto">Email: <a href="mailto:kaitlynsteagall@gmail.com"
-        style="color: black">kaitlynsteagall@gmail.com</a></div>
-    <div class="col-xl-3 mr-auto">Call: <a href="tel:5036796794" style="color: black">(503) 679-6794</a></div>
+  <div class="navbar navbar-expand-lg navbar-light bg-light mt-5 pt-3 pb-3" style="width: 100%; text-align: center;">
+    <div class="row mx-auto">
+        <div class="col-xl-3"><a href="mailto:kaitlynsteagall@gmail.com" style="color: black">Email</a></div>
+        <div class="col-xl-3"><a href="tel:5036796794" style="color: black">Call</a></div>
+        <div class="col-xl-3"><a href="https://www.linkedin.com/in/kaitlyn-steagall/" style="color: black"><i class="fab fa-linkedin"></i></a></div>
+        <div class="col-xl-3"><a href="https://github.com/KaitlynSteagall" style="color: black"><i class="fab fa-github-square"></i></a></div>
+    </div>
+
   </div>
 
 
