--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
 
   <footer>
       <div class="col-xl-3 ml-auto">Email: <a href="mailto:kaitlynsteagall@gmail.com" style="color: black">kaitlynsteagall@gmail.com</a></div>
-      <div class="col-xl-3 mr-auto">Call: <a href="tel:5036796794" style="color: black">(503) 679-6794</a></div>
+      <div class="col-xl-3 mr-auto">Call: <a href="tel:(503)679-6794" style="color: black">(503) 679-6794</a></div>
   </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
