change href in ph# to see if it'll display differently/work when I call

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <div class="navbar navbar-expand-lg navbar-light bg-light mt-5 pt-3 pb-3" style="width: 100%; text-align: center;">
     <div class="row mx-auto">
         <div class="col-xl-3"><a href="mailto:kaitlynsteagall@gmail.com" style="color: black">Email</a></div>
-        <div class="col-xl-3"><a href="tel:5036796794" style="color: black">Call</a></div>
+        <div class="col-xl-3"><a href="tel:(503)679-6794" style="color: black">Call</a></div>
         <div class="col-xl-3"><a href="https://www.linkedin.com/in/kaitlyn-steagall/" style="color: black"><i class="fab fa-linkedin"></i></a></div>
         <div class="col-xl-3"><a href="https://github.com/KaitlynSteagall" style="color: black"><i class="fab fa-github-square"></i></a></div>
     </div>
