add background image, add background color to header, container, and footer

--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-  <title>About | Kaitlyn Steagall</title>
+  <title>Portfolio</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Alef:700|Comfortaa:600|M+PLUS+1p:500&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5 mt-3">
+  <nav class="navbar navbar-expand-lg navbar-light mb-5 mt-3" style="background-color:rgba(255, 255, 255, 0.966)">
     <div class="container">
 
-      <a class="navbar-brand mx-auto" href="./index.html">
-        <h2 style="color: #0d736e">Kaitlyn Steagall</h2>
+      <a class="navbar-brand m-auto" href="./index.html">
+        <h2 class="pt-1" style="color: #0d736e">Kaitlyn Steagall</h2>
       </a>
 
     </div>
@@ -23,13 +24,13 @@
 
   <div class="container">
 
-    <div class="row" style="border: solid 2px black">
+    <div class="row" style="border-radius: 10px; background-color:rgba(236, 236, 236, 0.753);">
 
       <div class="col-xl-9 mb-3 mt-5">
         <div class="row">
           <div class="col-xl-12 mx-auto mb-4">
 
-            <img id="myPic" class="img-responsive float-left mb-1 mr-4" style="width:30%;"
+            <img id="myPic" class="img-responsive float-left mb-1 mr-4" style="width:30%; border-radius: 10px"
               src="./assets/images/tempheadshot.jpg" alt="kaitlyn's headshot">
             <p>My name is Kaitlyn Steagall, I was born in Albany, OR January, 12 1994. I moved up to Tigard, OR when I
               started middle school and I now live in Aloha, OR with Kent, my boyfriend of three and a half years, my
@@ -62,7 +63,7 @@
               <img src="" class="card-img-top" alt="">
               <div class="card-body">
                 <h5 class="card-title"><a href="https://noahsylwester.github.io/Netpets/">NetPets</a></h5>
-                <p><a href="https://github.com/NoahSylwester/Netpets">Checkout our collaborative code</a></p>
+                <span><a href="https://github.com/NoahSylwester/Netpets">Checkout our collaborative code</a></span>
               </div>
             </div>
           </div>
@@ -72,9 +73,8 @@
             <div class="card text-center">
               <img src="" class="card-img-top" alt="">
               <div class="card-body">
-                <h5 class="card-title"><a href="https://kaitlynsteagall.github.io/Animal-GIPHY-API/">Animal GIPHY
-                    API</a></h5>
-                <p><a href="https://github.com/KaitlynSteagall/Animal-GIPHY-API">Checkout my ajax code</a></p>
+                <h5 class="card-title"><a href="https://kaitlynsteagall.github.io/Animal-GIPHY-API/">Animal GIPHY API</a></h5>
+                <span><a href="https://github.com/KaitlynSteagall/Animal-GIPHY-API">Checkout my ajax code</a></span>
               </div>
             </div>
           </div>
@@ -85,7 +85,7 @@
               <img src="" class="card-img-top" alt="">
               <div class="card-body">
                 <h5 class="card-title"><a href="https://kaitlynsteagall.github.io/Trivia-Game/">Animal Trivia</a></h5>
-                <p><a href="https://github.com/KaitlynSteagall/Trivia-Game">Checkout my jquery code</a></p>
+                <span><a href="https://github.com/KaitlynSteagall/Trivia-Game">Checkout my jquery code</a></span>
               </div>
             </div>
           </div>
@@ -96,12 +96,12 @@
 
   </div>
 
-  <div class="navbar navbar-expand-lg navbar-light bg-light mt-5 pt-3 pb-3" style="width: 100%; text-align: center;">
+  <div class="navbar navbar-expand-lg navbar-light bg-light mt-5 pt-3 pb-3" style="width: 100%; text-align: center; background-color:rgba(255, 255, 255, 0.966)">
     <div class="row mx-auto">
-        <div class="col-xl-3"><a href="mailto:kaitlynsteagall@gmail.com" style="color: black">Email</a></div>
-        <div class="col-xl-3"><a href="tel:(503)679-6794" style="color: black">Call</a></div>
-        <div class="col-xl-3"><a href="https://www.linkedin.com/in/kaitlyn-steagall/" style="color: black"><i class="fab fa-linkedin"></i></a></div>
-        <div class="col-xl-3"><a href="https://github.com/KaitlynSteagall" style="color: black"><i class="fab fa-github-square"></i></a></div>
+        <div class="footerIcons col-xl-4 pr-3"><a href="mailto:kaitlynsteagall@gmail.com" style="color: black">Email</a></div>
+        <div class="footerIcons col-xl-3 pl-2 pr-2"><a href="tel:(503)679-6794" style="color: black">Call</a></div>
+        <div class="footerIcons col-xl-3"><a href="https://www.linkedin.com/in/kaitlyn-steagall/" style="color: black"><i class="fab fa-linkedin"></i></a></div>
+        <div class="col-xl-2"><a href="https://github.com/KaitlynSteagall" style="color: black"><i class="fab fa-github-square"></i></a></div>
     </div>
 
   </div>
