add div for resume, change font color on some text, darken background on main content container

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <title>Portfolio</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Alef:700|Comfortaa:600|M+PLUS+1p:500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Comfortaa:600&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 
@@ -16,7 +16,7 @@
     <div class="container">
 
       <a class="navbar-brand m-auto" href="./index.html">
-        <h2 class="pt-1" style="color: #0d736e">Kaitlyn Steagall</h2>
+        <h2 class="pt-1" style="color: #89a670">Kaitlyn Steagall</h2>
       </a>
 
     </div>
@@ -24,7 +24,7 @@
 
   <div class="container">
 
-    <div class="row" style="border-radius: 10px; background-color:rgba(236, 236, 236, 0.753);">
+    <div class="row" style="border-radius: 10px; background-color:rgba(236, 236, 236, 0.801);">
 
       <div class="col-xl-9 mb-3 mt-5">
         <div class="row">
@@ -62,8 +62,10 @@
             <div class="card text-center">
               <img src="" class="card-img-top" alt="">
               <div class="card-body">
-                <h5 class="card-title"><a href="https://noahsylwester.github.io/Netpets/">NetPets</a></h5>
-                <span><a href="https://github.com/NoahSylwester/Netpets">Checkout our collaborative code</a></span>
+                <h5 class="card-title"><a href="https://noahsylwester.github.io/Netpets/"
+                    style="color: #89a670">NetPets</a></h5>
+                <span><a href="https://github.com/NoahSylwester/Netpets" style="color: #89a670">Checkout our
+                    collaborative code</a></span>
               </div>
             </div>
           </div>
@@ -73,8 +75,10 @@
             <div class="card text-center">
               <img src="" class="card-img-top" alt="">
               <div class="card-body">
-                <h5 class="card-title"><a href="https://kaitlynsteagall.github.io/Animal-GIPHY-API/">Animal GIPHY API</a></h5>
-                <span><a href="https://github.com/KaitlynSteagall/Animal-GIPHY-API">Checkout my ajax code</a></span>
+                <h5 class="card-title"><a href="https://kaitlynsteagall.github.io/Animal-GIPHY-API/"
+                    style="color: #89a670">Animal GIPHY API</a></h5>
+                <span><a href="https://github.com/KaitlynSteagall/Animal-GIPHY-API" style="color: #89a670">Checkout my
+                    ajax code</a></span>
               </div>
             </div>
           </div>
@@ -84,8 +88,21 @@
             <div class="card text-center">
               <img src="" class="card-img-top" alt="">
               <div class="card-body">
-                <h5 class="card-title"><a href="https://kaitlynsteagall.github.io/Trivia-Game/">Animal Trivia</a></h5>
-                <span><a href="https://github.com/KaitlynSteagall/Trivia-Game">Checkout my jquery code</a></span>
+                <h5 class="card-title"><a href="https://kaitlynsteagall.github.io/Trivia-Game/"
+                    style="color: #89a670">Animal Trivia</a></h5>
+                <span><a href="https://github.com/KaitlynSteagall/Trivia-Game" style="color: #89a670">Checkout my jquery
+                    code</a></span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xl-12 mx-auto mb-4">
+            <div class="card text-center">
+              <img src="" class="card-img-top" alt="">
+              <div class="card-body">
+                <span class="card-title"><a href="" style="color: #89a670">My Resume <i
+                      class="far fa-file-pdf"></i></a></span>
               </div>
             </div>
           </div>
@@ -96,12 +113,16 @@
 
   </div>
 
-  <div class="navbar navbar-expand-lg navbar-light bg-light mt-5 pt-3 pb-3" style="width: 100%; text-align: center; background-color:rgba(255, 255, 255, 0.966)">
+  <div class="navbar navbar-expand-lg navbar-light bg-light mt-5 pt-3 pb-3"
+    style="width: 100%; text-align: center; background-color:rgba(255, 255, 255, 0.966)">
     <div class="row mx-auto">
-        <div class="footerIcons col-xl-4 pr-3"><a href="mailto:kaitlynsteagall@gmail.com" style="color: black">Email</a></div>
-        <div class="footerIcons col-xl-3 pl-2 pr-2"><a href="tel:(503)679-6794" style="color: black">Call</a></div>
-        <div class="footerIcons col-xl-3"><a href="https://www.linkedin.com/in/kaitlyn-steagall/" style="color: black"><i class="fab fa-linkedin"></i></a></div>
-        <div class="col-xl-2"><a href="https://github.com/KaitlynSteagall" style="color: black"><i class="fab fa-github-square"></i></a></div>
+      <div class="footerIcons col-xl-4 pr-3"><a href="mailto:kaitlynsteagall@gmail.com" style="color: #6f795a">Email</a>
+      </div>
+      <div class="footerIcons col-xl-3 pl-2 pr-2"><a href="tel:(503)679-6794" style="color: #6f795a">Call</a></div>
+      <div class="footerIcons col-xl-3"><a href="https://www.linkedin.com/in/kaitlyn-steagall/"
+          style="color: #6f795a"><i class="fab fa-linkedin"></i></a></div>
+      <div class="col-xl-2"><a href="https://github.com/KaitlynSteagall" style="color: #6f795a"><i
+            class="fab fa-github-square"></i></a></div>
     </div>
 
   </div>
