--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <nav class="navbar navbar-expand-lg navbar-light mb-5 mt-3" style="background-color:rgba(255, 255, 255, 0.966)">
     <div class="container">
 
-      <a class="navbar-brand m-auto" href="./index.html">
+      <a class="navbar-brand mx-auto" href="./index.html">
         <h2 class="pt-1" style="color: #89a670">Kaitlyn Steagall</h2>
       </a>
 
