update footer, add PDF, add GIF for NetPets, make headshot larger

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  
   <nav class="navbar navbar-expand-lg navbar-light mb-5 mt-3" style="background-color:rgba(255, 255, 255, 0.966)">
     <div class="container">
 
@@ -26,105 +27,76 @@
 
     <div class="row" style="border-radius: 10px; background-color:rgba(236, 236, 236, 0.801);">
 
-      <div class="col-xl-9 mb-3 mt-5">
+      <div class="col-xl-9 mt-5">
         <div class="row">
-          <div class="col-xl-12 mx-auto mb-4">
-
-            <img id="myPic" class="img-responsive float-left mb-1 mr-4" style="width:30%; border-radius: 10px"
-              src="./assets/images/tempheadshot.jpg" alt="kaitlyn's headshot">
-            <p>My name is Kaitlyn Steagall, I was born in Albany, OR January, 12 1994. I moved up to Tigard, OR when I
-              started middle school and I now live in Aloha, OR with Kent, my boyfriend of three and a half years, my
-              dog
-              Sherman, my cat Lilly, my ferret Bonnie, and my fish Stanlee. I love animals, so I'm happy I get to come
-              home to them everyday!</p>
-            <p>I love collecting rocks, shells, and four-leaf clovers, so half the time when I'm outside I'm looking
-              down.
-              I've also started to collect fridge magnents! I have at least ten right now.</p>
-            <p>I love music. I love ALL types of music, and not the fake "I love all music" either, I listen to and
-              enjoy
-              common dislikes such as metal, country, classical, etc. My favorite genre though is probably Alternative
-              or
-              Punk. I played the violin for eight years and also used to know a bit on the guitar, but I haven't
-              practiced
-              in a
-              few years, so I'm out of touch with my skills.</p>
-            <p>Another thing I haven't practiced in a while, but also used to really enjoy, was flying Cessna 172s. It's
-              the best feeling to be up in the air and it's thrilling to do your first power-on and power-off stalls.
-              Maybe someday I'll get some more hours in my log, but life is so busy busy busy!!!</p>
-            <p> When I'm able to go with the flow is when I'm my happiest. We just got to keep on keeping on.</p>
+          <div class="col-xl-12 mx-auto">
+            <img id="myPic" class="img-responsive float-left mb-1 mr-4" style="width:40%; border-radius: 10px" src="./assets/images/tempheadshot.jpg" alt="kaitlyn's headshot">
+            <p>My name is Kaitlyn Steagall, one thing all of my managers have said about me is how detail oriented I am. 
           </div>
         </div>
       </div>
 
       <div class="col-xl-3 mb-3 mt-5">
+
+        <div class="row">
+          <div class="col-xl-12 mx-auto mb-4">
+            <div class="card text-center">
+              <img src="./assets/gifs/NetPets.gif" style="width: 13rem;" class="card-img-top mx-auto mt-3" alt="NetPets Game">
+              <div class="card-body">
+                <h5 class="card-title"><a href="https://noahsylwester.github.io/Netpets/" style="color: #89a670">NetPets</a></h5>
+                <a href="https://github.com/NoahSylwester/Netpets" style="color: #89a670">Checkout our collaborative code</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div class="row">
           <div class="col-xl-12 mx-auto mb-4">
             <div class="card text-center">
               <img src="" class="card-img-top" alt="">
               <div class="card-body">
-                <h5 class="card-title"><a href="https://noahsylwester.github.io/Netpets/"
-                    style="color: #89a670">NetPets</a></h5>
-                <span><a href="https://github.com/NoahSylwester/Netpets" style="color: #89a670">Checkout our
-                    collaborative code</a></span>
+                <h5 class="card-title"><a href="https://kaitlynsteagall.github.io/Animal-GIPHY-API/" style="color: #89a670">Animal GIPHY API</a></h5>
+                <a href="https://github.com/KaitlynSteagall/Animal-GIPHY-API" style="color: #89a670">Checkout my ajax code</a>
               </div>
             </div>
           </div>
         </div>
+
         <div class="row">
           <div class="col-xl-12 mx-auto mb-4">
             <div class="card text-center">
               <img src="" class="card-img-top" alt="">
               <div class="card-body">
-                <h5 class="card-title"><a href="https://kaitlynsteagall.github.io/Animal-GIPHY-API/"
-                    style="color: #89a670">Animal GIPHY API</a></h5>
-                <span><a href="https://github.com/KaitlynSteagall/Animal-GIPHY-API" style="color: #89a670">Checkout my
-                    ajax code</a></span>
+                <h5 class="card-title"><a href="https://kaitlynsteagall.github.io/Trivia-Game/" style="color: #89a670">Animal Trivia</a></h5>
+                <a href="https://github.com/KaitlynSteagall/Trivia-Game" style="color: #89a670">Checkout my jquery code</a>
               </div>
             </div>
           </div>
         </div>
+
         <div class="row">
           <div class="col-xl-12 mx-auto mb-4">
             <div class="card text-center">
-              <img src="" class="card-img-top" alt="">
               <div class="card-body">
-                <h5 class="card-title"><a href="https://kaitlynsteagall.github.io/Trivia-Game/"
-                    style="color: #89a670">Animal Trivia</a></h5>
-                <span><a href="https://github.com/KaitlynSteagall/Trivia-Game" style="color: #89a670">Checkout my jquery
-                    code</a></span>
+                <span class="card-title"><a href="./assets/pdf/BootCampResume.pdf" style="color: #89a670">My Resume <i class="far fa-file-pdf"></i></a></span>
               </div>
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-xl-12 mx-auto mb-4">
-            <div class="card text-center">
-              <img src="" class="card-img-top" alt="">
-              <div class="card-body">
-                <span class="card-title"><a href="" style="color: #89a670">My Resume <i
-                      class="far fa-file-pdf"></i></a></span>
-              </div>
-            </div>
-          </div>
-        </div>
+
       </div>
 
     </div>
 
   </div>
 
-  <div class="navbar navbar-expand-lg navbar-light bg-light mt-5 pt-3 pb-3"
-    style="width: 100%; text-align: center; background-color:rgba(255, 255, 255, 0.966)">
+  <div class="navbar navbar-expand-lg navbar-light bg-light mt-5 pt-3 pb-3 text-center" style="width: 100%; text-align: center; background-color:rgba(255, 255, 255, 0.966)">
     <div class="row mx-auto">
-      <div class="footerIcons col-xl-4 pr-3"><a href="mailto:kaitlynsteagall@gmail.com" style="color: #6f795a">Email</a>
-      </div>
-      <div class="footerIcons col-xl-3 pl-2 pr-2"><a href="tel:(503)679-6794" style="color: #6f795a">Call</a></div>
-      <div class="footerIcons col-xl-3"><a href="https://www.linkedin.com/in/kaitlyn-steagall/"
-          style="color: #6f795a"><i class="fab fa-linkedin"></i></a></div>
-      <div class="col-xl-2"><a href="https://github.com/KaitlynSteagall" style="color: #6f795a"><i
-            class="fab fa-github-square"></i></a></div>
+      <div class="footerIcons pr-3"><a href="mailto:kaitlynsteagall@gmail.com" style="color: #6f795a">Email</a></div>
+      <div class="footerIcons pl-3 pr-3"><a href="tel:(503)679-6794" style="color: #6f795a">Call</a></div>
+      <div class="footerIcons pl-4 pr-4"><a href="https://www.linkedin.com/in/kaitlyn-steagall/" style="color: #6f795a"><i class="fab fa-linkedin"></i></a></div>
+      <div class="pl-4 pr-4"><a href="https://github.com/KaitlynSteagall" style="color: #6f795a"><i class="fab fa-github-square"></i></a></div>
     </div>
-
   </div>
 
 
