--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="row">
           <div class="col-xl-12 mx-auto mb-4">
             <div class="card text-center">
-              <img src="./assets/gifs/NetPets.gif" style="width: 13rem;" class="card-img-top mx-auto mt-3" alt="NetPets Game">
+              <a href="https://noahsylwester.github.io/Netpets/"><img src="./assets/gifs/NetPets.gif"  style="width: 13rem;" class="card-img-top mx-auto mt-3" alt="NetPets Game"></a>
               <div class="card-body">
                 <h5 class="card-title"><a href="https://noahsylwester.github.io/Netpets/" style="color: #89a670">NetPets</a></h5>
                 <a href="https://github.com/NoahSylwester/Netpets" style="color: #89a670">Checkout our collaborative code</a>
