update href and ID for resume modal

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <div class="col-xl-12 mx-auto mb-4">
             <div class="card text-center">
               <div class="card-body">
-                <span class="card-title"><a data-toggle="modal" href="#funFacts" style="color: #89a670">My Resume <i class="far fa-file-pdf"></i></a></span>
+                <span class="card-title"><a data-toggle="modal" href="#Resume" style="color: #89a670">My Resume <i class="far fa-file-pdf"></i></a></span>
               </div>
             </div>
           </div>
@@ -91,7 +91,7 @@
 
   </div>
     
-  <div class="modal fade" id="funFacts" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal fade" id="Resume" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-body">
