--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="col-xl-9 mt-5">
         <div class="row">
           <div class="col-xl-12 mx-auto">
-            <img id="myPic" class="img-responsive float-left mb-1 mr-4" style="width:40%; border-radius: 10px" src="./assets/images/tempheadshot.jpg" alt="kaitlyn's headshot">
+            <a data-toggle="modal" href="#funFacts"><img id="myPic" class="img-responsive float-left mb-1 mr-4" style="width:40%; border-radius: 10px" src="./assets/images/tempheadshot.jpg" alt="kaitlyn's headshot"></a>
             <p>My name is Kaitlyn Steagall, 
               <!-- one thing all of my managers have said about me is how detail oriented I am.  -->
           </div>
@@ -104,6 +104,24 @@
     </div>
   </div>
 
+  <div class="modal fade" id="funFacts" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-body">
+            <h2>Fun Facts!</h2>
+            <ul>
+              <li>I love animals and I have a dog, cat, ferret, and beta fish.</li>
+              <li>I've flown a Cessna-172 and jumped out of a Cessna Grand Caravan.</li>
+              <li>I played the violin for 8 years.</li>
+              <li>I collect rocks, shells, four-leaf clovers, and fridge magnents.</li>
+            </ul>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn" data-dismiss="modal" style="background-color: #89a670">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
   <div class="navbar navbar-expand-lg navbar-light bg-light mt-5 pt-3 pb-3 text-center" style="width: 100%; text-align: center; background-color:rgba(255, 255, 255, 0.966)">
