--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="col-xl-3 mb-3 mt-5">
 
         <div class="row">
-          <div class="col-xl-12 mx-auto mb-4">
+          <div class="col-xl-12 col-md-5 mx-auto mb-4">
             <div class="card text-center">
               <a href="https://noahsylwester.github.io/Netpets/"><img src="./assets/gifs/NetPets.gif"  style="width: 13rem;" class="card-img-top mx-auto mt-3" alt="NetPets Game"></a>
               <div class="card-body">
@@ -52,7 +52,7 @@
         </div>
 
         <div class="row">
-          <div class="col-xl-12 mx-auto mb-4">
+          <div class="col-xl-12 col-md-5 mx-auto mb-4">
             <div class="card text-center">
               <img src="" class="card-img-top" alt="">
               <div class="card-body">
@@ -64,7 +64,7 @@
         </div>
 
         <div class="row">
-          <div class="col-xl-12 mx-auto mb-4">
+          <div class="col-xl-12 col-md-5 mx-auto mb-4">
             <div class="card text-center">
               <img src="" class="card-img-top" alt="">
               <div class="card-body">
@@ -76,7 +76,7 @@
         </div>
 
         <div class="row">
-          <div class="col-xl-12 mx-auto mb-4">
+          <div class="col-xl-12 col-md-5 mx-auto mb-4">
             <div class="card text-center">
               <div class="card-body">
                 <span class="card-title"><a data-toggle="modal" href="#Resume" style="color: #89a670">My Resume <i class="far fa-file-pdf"></i></a></span>
