fix spacing on @media for pic

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
       <div class="col-xl-9 mt-5">
         <div class="row">
           <div class="col-xl-12 mx-auto">
-            <a data-toggle="modal" href="#funFacts"><img id="myPic" class="img-responsive float-left mb-1 mr-4" style="width:40%; border-radius: 10px" src="./assets/images/tempheadshot.jpg" alt="kaitlyn's headshot"></a>
-            <p>My name is Kaitlyn Steagall, 
+            <div class="col-12 mx-auto">
+              <a data-toggle="modal" href="#funFacts"><img class="img-responsive float-left mb-3 mr-4" id="myPic" style="width:40%; border-radius: 10px" src="./assets/images/tempheadshot.jpg" alt="kaitlyn's headshot"></a>
+            </div>
+            <p id="aboutMe">My name is Kaitlyn Steagall, </p>
               <!-- one thing all of my managers have said about me is how detail oriented I am.  -->
           </div>
         </div>
