--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <nav class="navbar navbar-expand-lg navbar-light mb-5 mt-3" style="background-color:rgba(255, 255, 255, 0.966)">
     <div class="container">
 
-      <a class="navbar-brand mx-auto" href="./index.html">
-        <h2 class="pt-1" style="color: #89a670">Kaitlyn Steagall</h2>
+      <a class="navbar-brand mx-auto text-center">
+        <h2 class="pt-1" style="color: #89a670">Kaitlyn Steagall <br/> <h6 id="email-and-ph">Email: kaitlynsteagall@gmail.com | Phone: (503)679-6794</h6> </h2>
       </a>
 
     </div>
