add some context to about me

--- a/index.html
+++ b/index.html
@@ -33,8 +33,13 @@
             <div class="col-12 mx-auto">
               <a data-toggle="modal" href="#funFacts"><img class="img-responsive float-left mb-3 mr-4" id="myPic" style="width:40%; border-radius: 10px" src="./assets/images/tempheadshot.jpg" alt="kaitlyn's headshot"></a>
             </div>
-            <p id="aboutMe">My name is Kaitlyn Steagall, </p>
-              <!-- one thing all of my managers have said about me is how detail oriented I am.  -->
+            <p id="aboutMe">Hello, I'm Kaitlyn Steagall! I'm a full stack developer in training at the University of Oregon Coding Bootcamp.
+              So far I have experience in HTML, CSS, Bootstrap, Javascript, JQuery, and Node. Right now I really enjoy working UI because 
+              making visually pleasing sites and apps brings out my creative side, but I'm excited to keep learning and growing as a web developer.
+              <br/><br/>
+              I pride myself on being a detail oriented individual(my managers will attest to this). 
+              <!-- I love finding the patterns in everything and perfecting the learn and improving always, pleaser, perfection, team player -->
+            </p>
           </div>
         </div>
       </div>
@@ -56,7 +61,7 @@
         <div class="row">
           <div class="col-xl-12 col-md-5 mx-auto mb-4">
             <div class="card text-center">
-              <img src="" class="card-img-top" alt="">
+              <img src="" class="card-img-top" alt=""> <!-- Add GIF/pic once code is updated/page is more styled-->
               <div class="card-body">
                 <h5 class="card-title"><a href="https://kaitlynsteagall.github.io/Animal-GIPHY-API/" style="color: #89a670">Animal GIPHY API</a></h5>
                 <a href="https://github.com/KaitlynSteagall/Animal-GIPHY-API" style="color: #89a670">Checkout my ajax code</a>
@@ -68,7 +73,7 @@
         <div class="row">
           <div class="col-xl-12 col-md-5 mx-auto mb-4">
             <div class="card text-center">
-              <img src="" class="card-img-top" alt="">
+              <img src="" class="card-img-top" alt=""> <!-- Add GIF/pic once code is updated/page is more styled-->
               <div class="card-body">
                 <h5 class="card-title"><a href="https://kaitlynsteagall.github.io/Trivia-Game/" style="color: #89a670">Animal Trivia</a></h5>
                 <a href="https://github.com/KaitlynSteagall/Trivia-Game" style="color: #89a670">Checkout my jquery code</a>
