add link and screenshot for new project

--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
               <a data-toggle="modal" href="#funFacts"><img class="img-responsive float-left mb-3 mr-4" id="myPic" style="width:40%; border-radius: 10px" src="./assets/images/tempheadshot.jpg" alt="kaitlyn's headshot"></a>
             </div>
             <p id="aboutMe">Hello, I'm Kaitlyn Steagall! I'm a full stack developer in training at the University of Oregon Coding Bootcamp.
-              So far I have experience in HTML, CSS, Bootstrap, Javascript, JQuery, and Node. Right now I really enjoy working UI because 
-              making visually pleasing sites and apps brings out my creative side, but I'm excited to keep learning and growing as a web developer.
               <br/><br/>
               I pride myself on being a detail oriented individual(my managers will attest to this). 
               <!-- I love finding the patterns in everything and perfecting the learn and improving always, pleaser, perfection, team player -->
+              <br/><br/>
+              So far I have experience in HTML, CSS, Bootstrap, Javascript, JQuery, and Node. Right now I really enjoy working UI because 
+              making visually pleasing sites and apps brings out my creative side, but I'm excited to keep learning and growing as a web developer.
             </p>
           </div>
         </div>
@@ -53,6 +54,18 @@
               <div class="card-body">
                 <h5 class="card-title"><a href="https://noahsylwester.github.io/Netpets/" style="color: #89a670">NetPets</a></h5>
                 <a href="https://github.com/NoahSylwester/Netpets" style="color: #89a670">Checkout our collaborative code</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-xl-12 col-md-5 mx-auto mb-4">
+            <div class="card text-center">
+              <img src="./assets/images/puffinScreenshot.JPG" style="width: 13rem;" class="card-img-top mx-auto mt-3" alt=""> <!-- Add GIF/pic once code is updated/page is more styled-->
+              <div class="card-body">
+                <h5 class="card-title"><a href="https://grumpy-puffin-4289.herokuapp.com/" style="color: #89a670">Puffin Power</a></h5>
+                <a href="https://github.com/KaitlynSteagall/Project" style="color: #89a670">Checkout more collaborative code</a>
               </div>
             </div>
           </div>
